# HARDN-XDR

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PLAYBOOK.md  README.md  Setup.sh  _config.yml  build-pages.sh  changelog.md  docs-next-development.md  environment.yml  hardn-xdr  hardn.py  hardn_audit.sh  hardn_dark.py  hardn_qubes.py  install.sh  makefile  next.config.dev.ts  next.config.js  next.config.ts  package-lock.json  package.json  parsed-packages.txt  progs-report.csv  progs.csv  rebase.txt  requirements.txt  smoke_test.sh  test-csv-parsing.sh  test-site.sh  updated-progs.csv
.github/: FUNDING.yml  copilot-instructions.md  (+1 more)
src/setup/: _init_.py  fips.sh  grub.sh  hardn-common.sh  hardn-grub.sh  hardn-main.sh  hardn-packages.sh  hardn-setup.sh  hardn-shared.sh  hardn-uninstall.sh  hardn.toml  packages.sh  pyproject.toml  setup.sh
src/setup/modules/: aide.sh  apparmor.sh  audit_system.sh  auditd.sh  auto_updates.sh  backup_security.sh  banner.sh  behavioral_analysis.sh  binfmt.sh  bootloader_security.sh  central_logging.sh  chkrootkit.sh  compilers.sh  compliance_validation.sh  coredumps.sh  credential_protection.sh  debsums.sh  deleted_files.sh  disk_encryption.sh  dns_config.sh  fail2ban.sh  file_perms.sh  firejail.sh  firewire.sh  grub.sh  kernel_sec.sh  lynis_audit.sh  memory_optimization.sh  network_protocols.sh  ntp.sh  pakos_config.sh  pentest.sh  persistence_detection.sh  process_accounting.sh  process_protection.sh  purge_old_pkgs.sh  rkhunter.sh  secure_net.sh  selinux.sh  service_disable.sh  (+10 more)
(+184 files in other folders)
