[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardn"
version = "0.1.0"
description = "A Python project packaged as a Debian package"
authors = [
    { name = "HARDN team", email = "<placeholder>" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["example", "debian", "package"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools]
packages = ["hardn"]

[tool.setuptools.deb]
maintainer = HARDN team
section = "utils"
priority = "optional"
standards-version = "1.1.0"